wheresmattat/wheresmattat.css
html, body {
	height: 100%;
}

body {
	font-family: 'Nanum Gothic', sans-serif;
}

/*h1 {
	text-align: center;
	margin-top: 30px;
	margin-bottom: 5px;
	font-size: 2.8rem;
  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
               0px 8px 13px rgba(0,0,0,0.1),
               0px 18px 23px rgba(0,0,0,0.1);
}*/

#mainNavbar .navbar-brand {
	color: #003262;
}

#mainNavbar .nav-link:hover {
	color: #003262;
}

#mainNavbar .active-link {
	color: #003262;
}

p {
	font-family: 'Roboto', sans-serif;
}

#globe {
	text-align: center;
	font-size: 3.6rem;
	opacity: 0.75;
}

#intro-paragraph {
	text-align: center;
	margin: 30px auto;
}

.homePageContactLink {
	font-size: 2.25rem;
}

.homePageContactLinkIcon {
	color: rgba(0,0,0,.5);
}

.homePageContactLinkIcon:hover {
	color: #003262;
}

#travelHr {
	width: 75%;
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.card-img-grayscale {
    -webkit-filter: grayscale(100%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
	filter: grayscale(100%); /* FF 35+ */
	color: transparent;
 }

.card-img-grayscale:hover {
	/*transition: filter .1s ease-in-out;*/
	-webkit-filter: grayscale(0%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
	filter: grayscale(0%);
	color: white;
	font-family: 'Pacifico', cursive;
 	text-align: center;
}

 /*Bootstrap experiment*/
header {
  position: relative;
  background-color: black;
  height: 85vh;
  min-height: 25rem;
  width: 100%;
  overflow: hidden;
}

header video {
  position: absolute;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: 0;
  -ms-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

header .container {
  position: relative;
  z-index: 2;
}

header .overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.5;
  z-index: 1;
}

@media (pointer: coarse) and (hover: none) {
  header {
    background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
  }
  header video {
    display: none;
  }
}
/*End Bootstrap experiement*/
/*Adapted from: https://startbootstrap.com/snippets/video-header/*/

/*@media (max-width: 400px) {
	One idea is to shrink the font once you reach the small size
}*/

